Support and perform JUnit Platform launches